    Optimization dropped execution speed for one example from about 40s to
    about 8s on R2007b.
  - Provide release agnostic nargchk/narginchk replacement.

  - Fix: Out of memory when using assert_equals on very large cell arrays, or
    similarly large data. Very large input would cause shortest_alignment to
    run out of memory, as it has a quadratic memory print.


mlUnit 1.6.10 (2015-11-03)
--------------------------

  - Let MATLAB find mlUnit as proper toolbox. Users can query mlUnit version
    information by calling `>> ver('mlunit')` after having loaded mlUnit.
    However, it is necessary that the Contents.m is living inside a folder
    literally called "mlunit".
  - Additional failontestfail option in build.xml lets user choose whether the
    target should fail when tests failed or not.
  - Enable diff markers for multi-line char arrays and for cellstr arrays.
  - Align strings when preparing for diff marking. Implement alignment according
    to the shortest Levenshtein distance.
  - BSD license chosen for find_struct_differences and its test.
  - Support for MATLAB R2015b. In order to use function test cases with R2015b,
    the test cases need to be migrated. Instead of
    `test = load_tests_from_mfile(test_loader)`, use `output_tests_from_mfile`.
    This is a MATLAB script instead of a proper function.
  
  - Fix: matlabcommand.xml's logfile option is not actually optional
  - Fix: assert_equals judges Inf and Inf as not equal
  - Fix: stack expansion for syntax errors forgets to remove .m file extension
  - Fix: assert_equals outputs 'zeros(1,0)' for empty numerical arrays of
    size [1, 0].
  - Fix: printable fails for empty char array of size [0, 1] or [1, 0].
  - Fix: assert_equals judges empty arrays not equal, if their (empty) sizes
    differ
  - Fix: jUnit XML report given and actual encoding mismatch due to gap marker;
    reports will be ISO-8859-1 in order to avoid manual UTF-8 conversion.


mlUnit 1.6.9 (2015-06-17)